Cambios app-web

--- a/MEIv3/app/src/main/res/values/strings.xml
+++ b/MEIv3/app/src/main/res/values/strings.xml
@@ -149,4 +149,5 @@
     <string name="registrarse">registrarse</string>
     <string name="offline">Offline</string>
     <string name="todo">TODO</string>
+    <string name="becas">Becas</string>
 </resources>
