Mejoras en la app

--- a/MEIv3/app/src/main/res/values/strings.xml
+++ b/MEIv3/app/src/main/res/values/strings.xml
@@ -75,4 +75,10 @@
     <string name="offline">Offline</string>
     <string name="todo">TODO</string>
     <string name="becas">Becas</string>
+    <string name="resultado">Resultado:</string>
+    <string name="detalles">Detalles</string>
+    <string name="ir_a_recomendaciones">Ir a recomendaciones</string>
+    <string name="test_realizados">Test realizados:</string>
+    <string name="institucion">Institucion</string>
+    <string name="area">Area</string>
 </resources>
